2006-11-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/beans/beancontext/BeanContextServicesSupport.java:
	Added more documentation.
	(addService(Class,BeanContextServiceProvider,boolean)):
	Synchronized over global hierarchy lock.
	(bcsPreDeserializationHook(ObjectInputStream)): Implemented.
	(bcsPreSerializationHook(ObjectOutputStream)): Implemented.
	(childJustRemovedHook(Object,BCSChild)): Implemented.
	(createBCSSServiceProvider(Class,BeanContextServiceProvider)):
	Implemented.
	(fireServiceRevoked(BeanContextServiceRevokedEvent)):
	Added revocation-only listeners.
	(getBeanContextServicesPeer()): Implemented.
	(getCurrentServiceClasses(Class)): Synchronized over global
	hierarchy lock.
	(getCurrentServiceSelectors(Class)): Synchronized over global
	hierarchy lock, and fixed FIXME.
	(getService(BeanContextChild,Object,Class,Object,
	BeanContextServiceRevokedListener)): Implemented.
	(hasService(Class)): Synchronized over global hierarchy lock.
	(releaseService(BeanContextChild,Object,Object)): Implemented.
	(revokeService(Class,BeanContextServiceProvider,boolean)): Implemented.
	* java/beans/beancontext/BeanContextSupport.java:
	(remove(Object, boolean)): Documentation correction.
	
2006-11-19  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JEditorPane.java
	(PageStream): New inner class.
	(PageLoader): New inner class.
	(loading): New field.
	(setPage): Implemented asynchronous loading.
	* javax/swing/text/DefaultStyledDocument.java
	(ElementBuffer.create): New helper method.
	(create): Use new ElementBuffer method instead of hack.
	* javax/swing/text/html/HTMLDocument.java
	(HTMLReader.flushImpl): New helper method.
	(HTMLReader.addContent): Use flushImpl().
	(HTMLReader.blockClose): Added null check.
	(HTMLReader.flush): Use flushImpl().
	* javax/swing/text/html/HTMLEditorKit.java
	(createDefaultDocument): Set load priority to 4 and token threshold
	to 100.
	* javax/swing/text/html/TableView.java