@@ -1,3 +1,12 @@
+2006-11-20  Marco Trudel <mtrudel@gmx.ch>
+
+	* java/util/jar/JarFile.java (digestAlgorithms): New field used to cache
+	digest algorithm implementations.
+	(readSignatures): Parse the manifest once and reuse that data.
+	Add support for line breaks.
+	(verifyHashes): Use the parsed manifest entry.
+	(readManifestEntry): Removed.
+
 2006-11-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/beans/beancontext/BeanContextServicesSupport.java:
